# CatalystCX

./: .gitignore  CMakeLists.txt  CatalystCX.cpp  CatalystCX.hpp  Evaluate.cpp  README.md
.github/workflows/: ci.yml
module/: CatalystCX.cppm
